--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -67,6 +67,12 @@ a:hover{
   margin-top: 20px;
 }
 
+.profile_image {
+  margin-top: 20px;
+  max-width: 30%;  
+    height: auto;
+}
+
 .top_container {
   /*background-color: #29bb89;*/
   /*background-image: url("wave.png");*/
